tests/unit/errors/test2.js
// Punto y coma faltante antes de declaracion de variable

var a = 5;
var b = 6
var c = 7;
console.log(1);